--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "peerDependencies": {
     "jest-environment-puppeteer": "< 8.0.0",
-    "puppeteer": "*"
+    "puppeteer": "23.11.1"
   },
   "engines": {
     "node": ">=18.0.0"
