ci: try dispatch

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -11,7 +11,7 @@ on:
     branches:
       - release
       - feature/*
-
+  workflow_dispatch:
 jobs:
   call-frontend-ci-workflow:
     uses: netcracker/qubership-apihub-ci/.github/workflows/frontend-ci.yaml@main
