--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netcracker/qubership-apihub-jest-chrome-in-docker-environment",
-  "version": "1.0.4-feature-fix-headful-mode.2",
+  "version": "1.0.4-dev.0",
   "description": "",
   "main": "dist/lib/index.js",
   "type": "commonjs",
@@ -13,7 +13,7 @@
     "release-finish": "release-finish"
   },
   "devDependencies": {
-    "@netcracker/qubership-apihub-npm-gitflow": "2.0.0",
+    "@netcracker/qubership-apihub-npm-gitflow": "2.2.2",
     "@types/find-node-modules": "2.1.2",
     "@types/jest-environment-puppeteer": "5.0.6",
     "typescript": "5.3.3"
@@ -25,7 +25,7 @@
   },
   "peerDependencies": {
     "jest-environment-puppeteer": "< 8.0.0",
-    "puppeteer": "*"
+    "puppeteer": "21.11.0"
   },
   "engines": {
     "node": ">=18.0.0"
